# RestInRust

./: Cargo.toml
src/: argparser.rs  main.rs
