[package]
name = "restinrust"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
poem = "1.3.59"
poem-openapi = { version = "3.0.6", features = ["redoc", "swagger-ui", "rapidoc"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
